  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00022.html

20160120T1920Z <gchicares@sbcglobal.net> [455]

  install_libxml2_libxslt.make
Disable zlib to avoid a catastrophic problem (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00022.html

20160120T1924Z <gchicares@sbcglobal.net> [455]

  install_libxml2_libxslt.make
  install_mpatrol.make
Specify --host consistently (VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00022.html

20160121T0032Z <gchicares@sbcglobal.net> [455]

  alert_wx.cpp
  main_wx.cpp
  mc_enum_types_aux.cpp
Force linking despite overly-aggressive linker "optimization". See:
  http://lists.nongnu.org/archive/html/lmi/2014-08/msg00000.html
  http://lists.nongnu.org/archive/html/lmi/2014-10/msg00006.html
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00006.html
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00026.html

20160121T0045Z <gchicares@sbcglobal.net> [455]

  configure.ac
No longer add an "mgw" suffix, which interfered with cross compiling
(VZ). See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00006.html

20160122T1530Z <gchicares@sbcglobal.net> [455]

  skeleton.cpp
Fix defect introduced 20060812T0053Z: dead code. The line removed was
in 'main_wx.cpp' originally, and moved to the present file here:
  http://svn.savannah.nongnu.org/viewvc?view=rev&root=lmi&revision=5861

20160129T0231Z <zeitlin> [455]

  configure.ac
Don't link boost_system library if it's not detected by configure.

20160130T1212Z <gchicares@sbcglobal.net> [455]

  so_attributes.hpp
Forestall attribute warnings for gcc-4.9.1 as for gcc-4.9.2 .

20160130T1215Z <gchicares@sbcglobal.net> [455]

  main_wx.cpp
  mc_enum_types_aux.cpp
Don't attempt to force linking a function that is not visible. See:
  http://lists.nongnu.org/archive/html/lmi/2016-01/msg00087.html

20160130T1257Z <gchicares@sbcglobal.net> [455]

  install_msw.sh
Try to avoid an antimalware issue.
